--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild --bundle src/index.jsx --outdir=dist/js --sourcemap --target=chrome96",
-    "serve": "esbuild --bundle src/index.jsx --outdir=dist/js --sourcemap --target=chrome96 --servedir=dist"
+    "build": "esbuild --bundle src/index.jsx --outdir=dist --sourcemap --target=chrome96",
+    "serve": "esbuild --bundle src/index.jsx --outdir=dist --sourcemap --target=chrome96 --servedir=dist"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/iloahz/stats-one-pager#readme",
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "chart.js": "^3.6.0",
     "esbuild": "^0.14.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6"
   }
 }
